[package]
name = "cw20-merkle-bidding-airdrop"
version = "0.12.1"
authors = ["caarati", "stepyt"]
edition = "2018"
description = "An Airdrop contract for allowing users to claim rewards with Merkle Tree based proof, and bet on their allocation."
license = "Apache-2.0"
repository = "https://github.com/cosmos-arcade/cw-tokens"
homepage = ""
documentation = ""

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw-utils = "0.13.2"
cw2 = "0.13.2"
cw20 = "0.13.2"
cosmwasm-std = "1.0.0-beta8"
cw-storage-plus = "0.13.2"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
hex = "0.4"
sha2 = { version = "0.9.9", default-features = false }
anyhow = "1.0"

[dev-dependencies]
cosmwasm-schema = "1.0.0-beta8"
cw-multi-test = "0.13"
serde_json = "1.0"
